--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,44 @@
-#pyramid {
-    line-height: 0;
-    font-size: 30px;
-    color: #aa5588;
-    padding: 30px 0;
-}
 html{
   background-color: #ffffff;
+  font-size: 15px;
 }
 body {
     font-family: "Courier New", monospace;
     text-align: center;
-    width: 800px;
+    width: 80%;
     margin: 0 auto;
     background-color: #f5f0f0;
+    padding: 0 0 3rem 0;
   }
 
 main{
   border: solid 2px #aa5588;
   border-radius: 5px;
   background-color: #f5f5f0;
-  width: 600px;
+  width: 75%;
   margin: 0 auto;
 }
 
 header{
   background-color: #aa5588;
-  padding: 10px;
-  margin: 30px auto;
+  padding: .75rem;
+  margin: 2rem auto;
 }
 h1{
   color:#C3C3C3;
 }
 .params{
   background-color: #C3C3C3;
-  padding: 20px;
+  padding: 1.5rem;
 }
 
 label{
   font-weight: bold;
   font-size: 1.15rem;
+}
+#pyramid {
+    line-height: 0;
+    font-size: 2rem;
+    color: #aa5588;
+    padding: 2rem 0;
 }
